tests/neg/erased-val-rhs.scala
object Test {
  def f erased (i: Int) = {
    val j: Int = i // error
    ()
  }
}
